crates/keron-lang/tests/corpus/errors/check/fn_body_below_outer_val.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown variable `later`
  --> 2:3
  |
2 |   later + 1
  |   ^^^^^
